This bug has existed for years in Cycles: it will cause it to crash immediately on render #42829

Closed
opened 2014-12-07 12:59:47 +01:00 by Andy Bay · 9 comments

System Information
Operating system and graphics card

Windows 8 64bit
NVIDIA Geforce GTX 650
happened also on NVIDIA Geforce GTX 480

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
All Blender versions for a couple of years of time

Short description of error
Rendering with Cycles will cause Blender to crash immediately, even with just the default scene, if the Blender file is saved at a certain file path.

Exact steps for others to reproduce the error
Here is a video showing the behavior:
https://www.youtube.com/watch?v=1Pa64DlEYeA&feature=youtu.be

  • If I have not saved the Blender file, it works.
  • If I have saved the Blender file on C-drive, it works.
  • As soon as I save it on D-drive on a folder called ELÄMÄNHALLINTA, it crashes.

Could this be related to having scandinavian letters in the file path? It's weird, because when I tested from D/ä/ it did not crash!

**System Information** Operating system and graphics card Windows 8 64bit NVIDIA Geforce GTX 650 happened also on NVIDIA Geforce GTX 480 **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) All Blender versions for a couple of years of time **Short description of error** Rendering with Cycles will cause Blender to crash immediately, even with just the default scene, if the Blender file is saved at a certain file path. **Exact steps for others to reproduce the error** Here is a video showing the behavior: https://www.youtube.com/watch?v=1Pa64DlEYeA&feature=youtu.be - If I have not saved the Blender file, it works. - If I have saved the Blender file on C-drive, it works. - As soon as I save it on D-drive on a folder called ELÄMÄNHALLINTA, it crashes. Could this be related to having scandinavian letters in the file path? It's weird, because when I tested from D/ä/ it did not crash!
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Geminoidi

Added subscriber: @Geminoidi
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Hey there,
I remember some changes were made recently regarding this. So just to make sure we don't waste any time here, could you please try this with a recent build from buildbot?

Thanks for the report @Geminoidi!

Hey there, I remember some changes were made recently regarding this. So just to make sure we don't waste any time here, could you please try this with a recent build from [buildbot?](https://builder.blender.org/download/) Thanks for the report @Geminoidi!
Author

Hi!

I now downloaded blender-2.72-690345a-win64 and can confirm that the exact same behavior continues. As soon as I try to render the default scene with cycles, and have saved the document at D:\ELÄMÄNHALLINTA\crash test 2.blend it crashes. If I save the document in C-drive (or don't save it at all) it works.

Hi! I now downloaded blender-2.72-690345a-win64 and can confirm that the exact same behavior continues. As soon as I try to render the default scene with cycles, and have saved the document at D:\\ELÄMÄNHALLINTA\crash test 2.blend it crashes. If I save the document in C-drive (or don't save it at all) it works.

This issue was referenced by cb7cf523e5

This issue was referenced by cb7cf523e5c000609f32a382e2c0fcc57f635a42

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit cb7cf523e5.

Closed by commit cb7cf523e5.

This issue was referenced by blender/cycles@1ff6a809fd

This issue was referenced by blender/cycles@1ff6a809fdf90c07d22fb75ac929210115d3de8a
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42829
No description provided.